--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "deploy": "wrangler deploy --minify src/index.tsx"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.1.9",
-    "hono": "^3.8.0-rc.2",
-    "zod": "^3.21.4"
+    "@hono/zod-validator": "^0.7.2",
+    "hono": "^4.8.10",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20231002.0",
-    "wrangler": "^3.11.0"
+    "@cloudflare/workers-types": "^4.20250731.0",
+    "wrangler": "^4.27.0"
   }
 }
